fix: Baseline + Cupertino theme: blurred item backgrounds stopped working

--- a/src/Styles/body-themes.css
+++ b/src/Styles/body-themes.css
@@ -16,11 +16,13 @@ body {
         --ntb-shadow-base: var(--shadow-base);
         --ntb-shadow-xs: var(--shadow-xs);
     }
-    &[data-ntb-csstheme="Baseline"], &[data-ntb-csstheme="Cupertino"] {        
+    &[data-ntb-csstheme="Baseline"], &[data-ntb-csstheme="Cupertino"] {     
         --cg-nt-fab-inactive-opacity: 0.5;
         --cg-nt-tbar-inactive-opacity-desktop: 0.5;
         --cg-nt-tbar-inactive-opacity-mobile: 0.5;
-        --cg-nt-tbar-bg-color: rgba(0,0,0,0);
+        --cg-nt-tbar-bg-color: rgba(0,0,0,0.0);
+        /* theme overrides this? so reset it */
+        --raised-blur: blur(2px) saturate(1.5) brightness(1.025);
         &.is-phone {
             --cg-nt-fab-pos-x-mobile: var(--navbar-side-offset);
             --cg-nt-fab-pos-y-mobile: var(--navbar-bottom-offset);
